# Contextual

./: .clang-format  CMakeLists.txt  README.md
data/: Test.json
include/: ContextManager.h  ContextTable.h  Criterion.h  DatabaseQuery.h  MathUtils.h  Response.h  ResponseSimple.h  RuleDatabase.h  RuleParser.h  RuleTable.h  StringTable.h  SymbolTable.h  TokenContext.h  TokenFloat.h  TokenFunction.h  TokenGroup.h  TokenInt.h  TokenList.h  TokenSymbol.h
include/app/: AppSettings.h  ContextParser.h  QueryParser.h  ResponseTestParser.h  RuleTestParser.h  TestParser.h
include/criterion/: Criterion.h  CriterionAlternate.h  CriterionDynamic.h  CriterionEmpty.h  CriterionExist.h  CriterionFail.h  CriterionFloatComparable.h  CriterionIncludes.h  CriterionInvertible.h  CriterionListComparable.h  CriterionStatic.h
include/function/: DefaultFunctionTable.h  FunctionTable.h
include/json/: CriteriaParser.h  DatabaseParser.h  JsonUtils.h  RuleParser.h  SymbolParser.h  TokenParser.h
include/response/: Response.h  ResponseContext.h  ResponseContextAdd.h  ResponseContextInvert.h  ResponseContextMultiply.h  ResponseContextSetDynamic.h  ResponseContextSetList.h  ResponseContextSetStatic.h  ResponseEvent.h  ResponseMultiple.h  ResponseSimple.h  ResponseSpeech.h
include/speech/: SpeechGenerator.h  SpeechResult.h  SpeechToken.h  SpeechTokenizer.h  TextToken.h
include/token/: SymbolToken.h  Token.h  TokenBoolean.h  TokenContext.h  TokenFloat.h  TokenFunction.h  TokenGroup.h  TokenInt.h  TokenList.h  TokenString.h  TokenType.h
src/: ContextManager.cpp  ContextTable.cpp  DatabaseQuery.cpp  Main.cpp  MathUtils.cpp  ResponseMultiple.cpp  ResponseSimple.cpp  RuleDatabase.cpp  RuleParser.cpp  RuleTable.cpp  StringTable.cpp  SymbolTable.cpp  Token.cpp  TokenBoolean.cpp  TokenContext.cpp  TokenFloat.cpp  TokenFunction.cpp  TokenGroup.cpp  TokenInt.cpp  TokenList.cpp  TokenString.cpp  TokenSymbol.cpp
src/app/: CMakeLists.txt  ContextParser.cpp  Main.cpp  QueryParser.cpp  ResponseTestParser.cpp  RuleTestParser.cpp  TestParser.cpp
src/criterion/: Criterion.cpp  CriterionAlternate.cpp  CriterionDynamic.cpp  CriterionEmpty.cpp  CriterionExist.cpp  CriterionFail.cpp  CriterionFloatComparable.cpp  CriterionIncludes.cpp  CriterionInvertible.cpp  CriterionListComparable.cpp  CriterionStatic.cpp
src/function/: DefaultFunctionTable.cpp  FunctionTable.cpp
src/json/: CriteriaParser.cpp  DatabaseParser.cpp  JsonUtils.cpp  RuleParser.cpp  SymbolParser.cpp  TokenParser.cpp
src/response/: ResponseContext.cpp  ResponseContextAdd.cpp  ResponseContextInvert.cpp  ResponseContextMultiply.cpp  ResponseContextSetDynamic.cpp  ResponseContextSetList.cpp  ResponseContextSetStatic.cpp  ResponseEvent.cpp  ResponseMultiple.cpp  ResponseSimple.cpp  ResponseSpeech.cpp
src/speech/: SpeechGenerator.cpp  SpeechTokenizer.cpp
src/token/: Token.cpp  TokenBoolean.cpp  TokenContext.cpp  TokenFloat.cpp  TokenFunction.cpp  TokenGroup.cpp  TokenInt.cpp  TokenList.cpp  TokenString.cpp
tests/unit/: CMakeLists.txt  TestContextTable.cpp  TestSpeechGenerator.cpp  TestSpeechTokenizer.cpp
